<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kyzr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Help</string>
    <string name="kyzr_title">Kyzr</string>
    <string name="recieved_ids">Your IDs:</string>
    <string name="no_location_detected">No location detected.</string>
    <string name="latitude_default">Latitude</string>
    <string name="longitude_default">Longitude</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="intro_hint">Enter a name for your torch!</string>
    <string name="name_denied">Sorry, there is already a torch with that name</string>
    <string name="intro_button">Submit</string>
    <string name="torch_description">Torch Image</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_stats">Help</string>
    <string name="current_torch">Current Torch: </string>
    <string name="help_text">To use Kyzr: Find a friend or a stranger with an NFC-compatible Android device. Open up Kyzr. Bring the back of your phones together, and tap the torch. Revel in the glory of having swapped torches. Profit.</string>
    <string name="about_text">About the Kyzr Team: We\'re a group of first-years studying Electrical and Computer Engineering at Olin College of Engineering in Needham, MA. Please direct job offers to patrick@thekyzrproject.com</string>
    <string name="help_title">Help</string>
    <string name="your_torch">Your Torch</string>
    <string name="distance_stat">Distance Travelled</string>
    <string name="num_transactions">Number of Transactions</string>
    <string name="current_owner">Current Owner</string>

</resources>
