<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.phuston.android.sleepme.SleepOptionsFragment"
              android:background="@color/accent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/IDTextview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/beamer_title"
            android:textColor="@color/primarytext"
            android:background="@color/lightprimary"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/abc_text_size_title_material"
            android:gravity="center_vertical|center_horizontal"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/RecievedIDsTextview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/recieved_ids"
            android:textColor="@color/primarytext"
            android:background="@color/lightprimary"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/abc_text_size_title_material"
            android:gravity="center_vertical|center_horizontal"
            android:elevation="5dp"/>

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/torchImage"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:src="@drawable/torch" />-->

        <TextView
            android:id="@+id/LatitudeTextview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/latitude_default"
            android:textColor="@color/primarytext"
            android:background="@color/lightprimary"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/abc_text_size_title_material"
            android:gravity="center_vertical|center_horizontal"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/LongitudeTextview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/longitude_default"
            android:textColor="@color/primarytext"
            android:background="@color/lightprimary"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/abc_text_size_title_material"
            android:gravity="center_vertical|center_horizontal"
            android:elevation="5dp"/>

    </LinearLayout>

</LinearLayout>
