<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phuston.android.kyzr.HelpActivity"
    android:background="@color/accent"
    android:textAlignment="center">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_textview"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:textColor="@color/primarytext"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneid_textview"
            android:textColor="@color/primarytext" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_torch"
                android:id="@+id/thisphoneinfo_textview"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/primarytext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_stat"
                android:id="@+id/distancetitle1_textview"
                android:layout_below="@+id/thisphoneinfo_textview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/primarytext"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/distance1_textview"
                android:layout_alignTop="@+id/distancetitle1_textview"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_transactions"
                android:id="@+id/numtransactionstitle1_textview"
                android:layout_below="@+id/distance1_textview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/primarytext"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/numtransactions1_textview"
                android:layout_alignTop="@+id/numtransactionstitle1_textview"
                android:layout_alignLeft="@+id/distance1_textview"
                android:layout_alignStart="@+id/distance1_textview"
                android:layout_alignParentRight="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_owner"
                android:id="@+id/currentownertitle1_textview"
                android:layout_below="@+id/numtransactionstitle1_textview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/primarytext"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/currentowner1_textview"
                android:layout_alignTop="@+id/currentownertitle1_textview"
                android:layout_alignLeft="@+id/distance1_textview"
                android:layout_alignStart="@+id/distance1_textview"
                android:layout_alignParentRight="true"
                android:textSize="16sp" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
